[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrestore"
version = "1.0.2"
authors = [
  { name="Douglas Greep", email="greepdouglas@gmail.com" },
]
description = "A modern, lightweight Python wrapper and high-level manager for Firebase Auth and Google Cloud Firestore."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "httpx>=0.24.0",
    "Pyrebase4>=4.3.0"
]

[project.urls]
"Homepage" = "https://github.com/DGreep/pyrestore"
"Bug Tracker" = "https://github.com/DGreep/pyrestore/issues"